fixing overflow

--- a/react-app/src/music/music.css
+++ b/react-app/src/music/music.css
@@ -11,7 +11,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 150px;
+    max-width: 150px !important;
 }
 
 .music-text {
