--- a/react-app/src/posts/creat-post-item.css
+++ b/react-app/src/posts/creat-post-item.css
@@ -1,5 +1,4 @@
 textarea {
-    resize: horizontal;
     overflow: hidden;
-    resize: none;
+    resize: none !important;
 }
